--- a/css files/Reg.css
+++ b/css files/Reg.css
@@ -189,14 +189,11 @@ footer {
 }
 
 @media screen and (max-width: 600px) {
-    html {
-        background-color: rgba(203, 160, 255, 0.514);
-    }
     #navbar {
-        display: flex;
-        justify-content: space-around;
+        display: column;
+        justify-content: center;
         width: 100%; 
-        height: 20px;
+        height: 170px;
         padding-bottom: 90px;
         background-color: rgb(252, 251, 182);
         
@@ -204,12 +201,11 @@ footer {
     
     #navlist {
         width: 100%;
-        display: flex;
-        justify-content: space-evenly;
+        display: table-column;
     }
     
     #navlist a{
-        display: block;
+        display: center;
         padding: 3px;
     }
 
@@ -218,5 +214,28 @@ footer {
     }
     button{
         border-radius: 25px;
+    }
+    #monkey{
+        display: flex;
+        font-size: 12px;
+        justify-content: space-between;
+    }
+
+    #food{
+        height: 150px;
+        width: 200px;
+        padding-right: 50px;
+        filter: drop-shadow(1px 1px 3px #00000041);
+    }
+
+    #george {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+    }
+
+    #caption{
+        padding-left: 40px;
+        padding-bottom: 20px;
     }
 }
