--- a/css files/style.css
+++ b/css files/style.css
@@ -68,12 +68,9 @@ a:link {
 /*Body and main working working*/
 /*Wrapper*/
 .wrapper {
-    max-width: 960px; /* 20px smaller, to fit the paddings on the sides */ 
-    margin: auto;
+    max-width: 100000000000px; /* 20px smaller, to fit the paddings on the sides */
+    margin: 0; 
   }
-    body{
-        margin: 0;
-    }
 
     main {
         padding-top: 20px;
@@ -217,14 +214,11 @@ a:link {
 }
 
 @media screen and (max-width: 600px) {
-    html {
-        background-color: rgba(203, 160, 255, 0.514);
-    }
     #navbar {
-        display: flex;
-        justify-content: space-around;
+        display: column;
+        justify-content: center;
         width: 100%; 
-        height: 20px;
+        height: 170px;
         padding-bottom: 90px;
         background-color: rgb(252, 251, 182);
         
@@ -232,12 +226,11 @@ a:link {
     
     #navlist {
         width: 100%;
-        display: flex;
-        justify-content: space-evenly;
+        display: table-column;
     }
     
     #navlist a{
-        display: block;
+        display: center;
         padding: 3px;
     }
 
@@ -246,5 +239,28 @@ a:link {
     }
     button{
         border-radius: 25px;
+    }
+    #monkey{
+        display: flex;
+        font-size: 12px;
+        justify-content: space-between;
+    }
+
+    #food{
+        height: 150px;
+        width: 200px;
+        padding-right: 50px;
+        filter: drop-shadow(1px 1px 3px #00000041);
+    }
+
+    #george {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+    }
+
+    #caption{
+        padding-left: 40px;
+        padding-bottom: 20px;
     }
 }
