--- a/css files/W2G.css
+++ b/css files/W2G.css
@@ -98,6 +98,10 @@ background-color: rgba(203, 160, 255, 0.925);
         font-size: 16px;
     }
 
+    figcaption{
+        font-size: 12px;;
+    }
+
     ul {
         list-style: none;
         padding-right: 10px;
@@ -124,6 +128,16 @@ background-color: rgba(203, 160, 255, 0.925);
     .Header {
         display: flex;
         justify-content: center;
+     }
+
+     .grid{
+         display: grid;
+         justify-content: space-evenly;
+         
+     }
+
+     .project-grid {
+         display: grid;
      }
 
 /*footer*/
