--- a/css files/W2G.css
+++ b/css files/W2G.css
@@ -99,7 +99,8 @@ background-color: rgba(203, 160, 255, 0.925);
     }
 
     figcaption{
-        font-size: 12px;;
+        font-size: 12px;
+        width: 300px;
     }
 
     ul {
@@ -131,14 +132,23 @@ background-color: rgba(203, 160, 255, 0.925);
      }
 
      .grid{
-         display: grid;
-         justify-content: space-evenly;
-         
-     }
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(270px, 2fr));
+        grid-gap: 3rem;
+        max-width: 1280px;
+        padding: 10px;
+        margin: 20px;
 
-     .project-grid {
-         display: grid;
      }
+     /*footer
+     .project-grid {
+        display: grid;
+        grid-template-rows: repeat(auto-fit, minmax(200px));
+        grid-gap: 3rem;
+        max-width: 1280px;
+        padding: 10px;
+    }
+    */
 
 /*footer*/
     footer {
