--- a/css files/FSTD.css
+++ b/css files/FSTD.css
@@ -7,8 +7,8 @@
 
 a:link {
     text-decoration: none;
-
 }  
+
 /*Header*/
 header {
     text-align: center;
@@ -19,6 +19,7 @@ header {
     padding-top: 30px;
     padding-bottom: 30px;
 }
+
 /*Navagation working*/
 #navbar {
     display: flex;
@@ -108,6 +109,12 @@ background-color: rgba(203, 160, 255, 0.925);
         padding: 10px;
         float: center; 
     }
+
+    figcaption{
+        font-size: 12px;
+        width: 300px;
+    }
+    
     .list {
         display: wrap;
     }
